# stagefuture

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  threadpool.cpp  threadpool.h
base/: base.h  log.h
concurrent/inc/: executor.h  executor_service.h  runnable.h
concurrent/src/: executor_service.cpp
core/: my_thread.h  task.cpp  task.h  task_helper.h  task_scheduler.cpp  task_scheduler.h  task_thread.cpp  task_thread.h  thread_scheduler.cpp  thread_scheduler.h
examples/: CMakeLists.txt  gtk_scheduler.cpp  main.cpp
include/: stagefuture.h
include/async++/: ref_count.h
include/stagefuture/: aligned_alloc.h  cancel.h  continuation_vector.h  parallel_for.h  parallel_invoke.h  parallel_reduce.h  partitioner.h  range.h  ref_count.h  scheduler.h  scheduler_fwd.h  stage_future.h  task.h  task_base.h  traits.h  when_all_any.h
src/: fifo_queue.h  internal.h  scheduler.cpp  singleton.h  task_wait_event.h  threadpool_scheduler.cpp  work_steal_queue.h
test/: CMakeLists.txt  Scene.h  main.cpp
thread/inc/: thread.h
thread/src/: thread.cpp
